--- a/index.html
+++ b/index.html
@@ -3,18 +3,18 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>pixel-port-studio</title>
-    <meta name="description" content="Lovable Generated Project" />
-    <meta name="author" content="Lovable" />
+    <title>portfolio</title>
+    <meta name="description" content="Aggrey's Project" />
+    <meta name="author" content="Aggrey" />
 
     <meta property="og:title" content="pixel-port-studio" />
     <meta property="og:description" content="Lovable Generated Project" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content="https://unsplash.com/photos/gray-and-black-laptop-computer-on-surface-Im7lZjxeLhg" />
 
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:image" content="https://unsplash.com/photos/gray-and-black-laptop-computer-on-surface-Im7lZjxeLhg" />
   </head>
 
   <body>
